<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.udacity.shoestore.ui.login.LoginFragment"
        android:label="@string/fragment_login_nav_title"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_welcomeFragment"
            app:destination="@id/welcomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.udacity.shoestore.ui.instructions.InstructionsFragment"
        android:label="@string/fragment_instructions_nav_title"
        tools:layout="@layout/fragment_instructions">
        <action
            android:id="@+id/action_instructionsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeListFragment"
        android:name="com.udacity.shoestore.ui.shoelist.ShoeListFragment"
        android:label="fragment_shoe_list"
        tools:layout="@layout/fragment_shoe_list" >
        <action
            android:id="@+id/action_shoeListFragment_to_shoeDetailsFragment"
            app:destination="@id/shoeDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/shoeDetailsFragment"
        android:name="com.udacity.shoestore.ui.details.ShoeDetailsFragment"
        android:label="fragment_shoe_details"
        tools:layout="@layout/fragment_shoe_details" >
        <action
            android:id="@+id/action_shoeDetailsFragment_to_shoeListFragment"
            app:destination="@id/shoeListFragment" />
    </fragment>
    <fragment
        android:id="@+id/welcomeFragment"
        android:name="com.udacity.shoestore.ui.welcome.WelcomeFragment"
        android:label="@string/welcome_fragment_nav_title">
        <action
            android:id="@+id/action_welcomeFragment_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
    </fragment>
</navigation>